# focusboard

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
react/: package-lock.json
react/src/: App.css
react/src-tauri/src/: commands.rs
react/src/contexts/: AppContext.tsx
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: CalendarEventOverlay.svelte  CalendarWeeklyOverlay.svelte  ComponentNote.tsx  Home.svelte  calendarView.svelte  componentNote.svelte  loaderOverlay.svelte  notesView.svelte  timerView.svelte
src/lib/: Note.svelte  basicNote.svelte  componentNote.svelte
src/routes/: +page.svelte  app.css  style.css
src/types/: types.ts
svelte/: package-lock.json  package.json  vite.config.js
svelte/src-tauri/src/: commands.rs  db.rs  main.rs
svelte/src/components/: CalendarEventOverlay.svelte  calendarView.svelte  componentNote.svelte  notesView.svelte  timerView.svelte
svelte/src/routes/: +page.svelte  app.css
svelte/src/types/: types.ts
