[package]
name = "focusboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["Stenberg-N"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "time", "tls-rustls"] }
async-std = { version = "1.7", features = ["attributes"] }
tokio = { version = "1.48.0", features = ["time"] }
log = "0.4.28"
tauri-plugin-log = "2.7.1"
colored = "3.0.0"
dirs = "6.0.0"
time = "0.3.44"
